feat: api - product management
