# app/Http/Requests/Product/ApiStoreRequest.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Requests\Product;
+
+use App\Http\Requests\APIRequest;
+
+class ApiStoreRequest extends APIRequest
+{
+    use RuleTrait;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'name' => $this->getNameRules(),
+            'price' => $this->getPriceRules(),
+            'stock' => $this->getStockRules(),
+            'is_active' => $this->getIsActiveRules(),
+        ];
+    }
+}
