# app/Http/Requests/Product/ApiUpdateRequest.php
@@ -1,0 +1,46 @@
+<?php
+
+namespace App\Http\Requests\Product;
+
+use App\Http\Requests\APIRequest;
+
+class ApiUpdateRequest extends APIRequest
+{
+    use RuleTrait;
+
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Prepare the data for validation.
+     *
+     * @return void
+     */
+    public function prepareForValidation()
+    {
+        $this->merge([
+            'id' => $this->route('id'),
+        ]);
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'id' => $this->getIdRules(),
+            'name' => $this->getNameRules(),
+            'price' => $this->getPriceRules(),
+            'stock' => $this->getStockRules(),
+            'is_active' => $this->getIsActiveRules(),
+        ];
+    }
+}
